components/ChatSingleMessage/ChatSingleMessage.module.scss
@import "../../styles/globals.scss";
@import "../../styles/fonts.scss";

.noselect {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.ChatParentContainer {
  max-width: 100%;
  width: 100%;
  border-radius: 8px;

  &.Editing {
    background-color: $hot_pink;
  }

  .EmojiMobile {
    position: fixed;
    z-index: 100;
    bottom: 0;
  }
}

.SingleMessage {
  display: inline-flex;
  position: relative;
  background-color: transparent;
  width: 100%;
  padding: 8px 6px 20px 6px;
  column-gap: 10px;
  border: 1px solid transparent;
  border-radius: 8px;

  

  &Desktop {
    &:hover {
      border-color: $black;
      background: $white_5;
      //border-image: linear-gradient(to right, $silver-med, $white) 1;
      .Body {
        .Info {
          .Timestamp {
            visibility: visible;
          }
        }
      }
    }
  }

  .UserIcon {
    height: fit-content;
    width: fit-content;
    border-radius: 50%;
    user-select: none;
  }
  .emoji-mart {
    position: absolute;
    top: 40px;
    right: 0;
    z-index: 999;
  }

  .EmojiPicker {
    position: absolute;
    bottom: 0px;
    z-index: 10;

    #root {
      background-color: $fuel;
    }
  }

  .MessageEmoji {
    font-size: 22px;
  }

  > img,
  &Avatar {
    position: relative;
    width: 40px;
    max-height: 40px;
    border-radius: 9999px;
    overflow: hidden;
    object-fit: cover;
  }

  &AvatarNo {
    position: relative;
    height: 36px;
    width: 36px;
    max-height: 36px;
    max-width: 36px;
    min-width: 36px;
    max-width: 36px;
    background-color: $hot_blue;
    border-radius: 9999px;
    @include topicTitleMobile;
    color: $font_dark;
  }

  .Body {
    position: relative;
    width: 100%;
    .Info {
      display: flex;
      align-items: baseline;
      column-gap: 8px;
      height: 16px;
      padding: 0px 0px 0px 0px;
      .Creator {
        @include chatProfile;
        color: $font_light;
        user-select: none;
      }
      .Timestamp {
        visibility: hidden;
        color: $font_medium;
        @include timeStamp;
        user-select: none;
      }
    }

    .Content {
      position: relative;
      width: fit-content;
      max-width: 100%;
      color: $font_light;
      @include chatText;
      border: 0;
      border: 0;
      white-space: pre-wrap;
      overflow-wrap: anywhere;

      .message-text {
        margin: 0;
        white-space: pre-wrap;
        overflow-wrap: anywhere;
      }

      a {
        display: inline-block;
        font-size: inherit;
        white-space: pre-wrap;
        @include url;
        word-break: break-all;
        color: $hot_blue;
      }

      > img {
        border-radius: 12px;
        border: 3px solid transparent;
        margin-top: 4px;
        margin-bottom: 4px;

        &:hover {
          border-color: $hot_pink;
        }
      }
    }

    &Reactions {
      position: relative;
      display: flex;
      align-items: center;
      margin-left: 8px;
      width: max-content;
      gap: 8px;
      background: $black_60;
      padding: 4px 8px;
      border-radius: 999px;

      > * {
        margin-right: $gutter;
      }

      &Emoji {
        position: relative;
        height: 40px;
        width: 48px;
        font-size: 28px;
        line-height: 28px;
        background-color: $black_20;
        border-radius: 99px;
        z-index: 1;
        margin: 0;
        border: 1px solid $ash;
        user-select: none;

        &Owner {
          border-color: $hot_pink;
        }
        &Data {
          position: absolute;
          top: -87%;
          background: black;
          color: white;
          &Group {
            position: absolute;
            top: -87%;
            background: black;
            color: white;
          }
        }

        &Desktop {
          &:hover {
            scale: 1.1;
          }
        }

        &Mobile {
          &:active {
            scale: 1.1;
          }
        }
      }

      &AddReaction {
        height: 36px;
        width: 44px;
        background-color: transparent;
        padding: 0;
        padding: 2px 0px 0px 0px;
        border-radius: 99px;
        z-index: 1;
        margin: 0;
        border: 1px solid $ash;
        user-select: none;
        background-color: $black_20;
        svg {
          width: 24px;
          height: 24px;
        }
        path {
          fill: $ash_medium;
        }

        &Desktop {
          &:hover {
            background-color: black;
          }
        }

        &Mobile {
          &:active {
            scale: 1.1;
            background-color: black;
          }
        }
      }
    }
  }

  .Controls {
    position: absolute;
    z-index: 10;
    display: flex;
    flex-direction: row;
    gap: 4px;
    top: -8px;
    right: 16px;
    background-color: $ash_medium;
    backdrop-filter: blur(24px);
    border-radius: 8px;
    padding: 2px;
    border: 1px solid $black;

    > button {
      position: relative;
      display: flex;
      align-items: center;
      justify-content: center;
      height: 28px;
      width: 28px;
      border-radius: 10px;
      background-color: transparent;
      cursor: pointer;
      border: 0;
      padding: 4px;
      overflow: hidden;

      path {
        fill: $black;
      }

      &:hover {
        scale: 1.2;
        path {
          fill: $font_light;
        }
      }
    }
  }
}

.EmojiPicker {
  position: absolute;
  bottom: 0px;
  z-index: 10;

  #root {
    background-color: $fuel;
  }
}
.imageholder {
  height: 63%;
  overflow: hidden;
}

.ogCard {
  padding: 12px;
  margin-top: 4px;
  background-color: $white;
  border-radius: 12px;
  @include montserrat;
  font-size: 13px;
  font-weight: 500;
  color: $silver-dark;
  width: 100%;
  max-width: 300px;
  user-select: none;
  height: 500px;
  overflow: hidden;

  .attribution {
    display: flex;
    flex-direction: row;
    align-items: center;
    width: 100%;
    padding: 0px;
    height: 5%;
    overflow: hidden;
    text-overflow: ellipsis;
    text-decoration: none;
    img {
      margin: 0;
      width: 20px;
      height: 20px;
      overflow: hidden;
      object-fit: contain;
    }

    p {
      margin-left: 4px;
      @include worksans;
      font-size: 14px;
      line-height: 100%;
      font-weight: 800;
      color: $fuel;
    }
  }

  .titlewrapper {
    height: 12%;
    overflow: hidden;
    text-overflow: ellipsis;
    text-decoration: none;
  }

  .title {
    font-weight: 700;
    font-size: 14px;
    line-height: 125%;
    color: $fuel;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }
  }

  img {
    max-width: 100%;
    display: block;
    object-fit: contain;
  }

  .description {
    height: 20%;
    width: 100%;
    @include montserrat;
    line-height: 135%;
    font-weight: 500;
    font-size: 13px;
    margin-bottom: 8px;
    display: block;
    color: $silver-dark;
    max-height: 90px;
    overflow: hidden;
    text-overflow: ellipsis;
    text-decoration: none;
  }
}

.linkCard {
  position: relative;
  padding: 24px 32px 20px 20px;
  gap: 20px;
  margin-top: 10px;
  background-color: $white;
  border: 1px solid $silver-med;
  border-radius: 12px;
  width: fit-content;
  max-width: 100%;
  user-select: none;

  .urlLogo {
    width: 40px;
    min-width: 40px;
  }

  .icon {
    position: absolute;
    top: 4px;
    right: 4px;
    width: 24px;
    min-width: 24px;
    path {
      fill: $silver-med;
    }
  }
}

